crates/core/tests/ui/union_not_supported.rs
#[derive(ximple::ToXml)]
union Foo {
    foo: usize,
}

fn main() {}
